--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Julien Barbier <julien@holbertonschool.com>
+Ben Cook <808@holbertonschool.com>
