--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Julien Barbier <julien@holbertonschool.com>
 Ben Cook <808@holbertonschool.com>
+Brent Muha <800@holbertonschool.com>
+Sudeep Raj <864@holbertonschool.com>
