--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Julien Barbier <julien@holbertonschool.com>
 Ben Cook <808@holbertonschool.com>
 Brent Muha <800@holbertonschool.com>
 Sudeep Raj <864@holbertonschool.com>
+Trevor O'Farrell <744@holbertonschool.com>
