--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,4 @@ Ben Cook <808@holbertonschool.com>
 Brent Muha <800@holbertonschool.com>
 Sudeep Raj <864@holbertonschool.com>
 Trevor O'Farrell <744@holbertonschool.com>
+Ryuichi <806@holbertonschool.com>
