--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,4 @@ Brent Muha <800@holbertonschool.com>
 Sudeep Raj <864@holbertonschool.com>
 Trevor O'Farrell <744@holbertonschool.com>
 Ryuichi Miyazaki <806@holbertonschool.com>
+Edward Guillermo <803@holbertonschool.com>
